# python-flat-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.ini  ruff.toml
.github/workflows/: build-and-push.yaml
src/: main.py
src/robot/: robot.py
templates/: .dockerignore.tpl  Dockerfile.tpl  pre-commit-config.yaml.tpl  pyproject.toml  pytest.ini.tpl  ruff.toml.tpl
terraform/: variables.tf
tests/: conftest.py
tests/robot/: test_robot.py
