[tool.poetry]
name = "python-flat-template"
version = "0.1.0"
description = "Python flat template"
authors = ["Andres Garcia <jose.andres.gm29@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_flat_template"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
